crates/alder-parse/src/snapshots/alder_parse__statement__tests__let_mut.snap
---
source: crates/alder-parse/src/statement.rs
description: let mut count = 0
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Let(
        LetDecl {
            mutable: Some(
                Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
            ),
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Var(
                    "count",
                ),
            },
            annotation: None,
            value: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 17,
                    },
                    end: Position {
                        line: 1,
                        column: 18,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 0.0,
                        text: "0",
                    },
                ),
            },
        },
    ),
}
