crates/alder-parse/src/snapshots/alder_parse__statement__tests__minus_with_space_after_newline_continues.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    x\n    - 1\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 8,
                    },
                },
                value: BinOps {
                    operands: [
                        BinOpOperand {
                            expr: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 6,
                                    },
                                },
                                value: Var(
                                    "x",
                                ),
                            },
                            op: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 6,
                                    },
                                },
                                value: Sub,
                            },
                        },
                    ],
                    last: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 7,
                            },
                            end: Position {
                                line: 3,
                                column: 8,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 1.0,
                                text: "1",
                            },
                        ),
                    },
                },
            },
        ),
    },
}
