crates/alder-parse/src/snapshots/alder_parse__statement__tests__pipe_after_newline_continues.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    x\n    |> f\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 9,
                    },
                },
                value: BinOps {
                    operands: [
                        BinOpOperand {
                            expr: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 6,
                                    },
                                },
                                value: Var(
                                    "x",
                                ),
                            },
                            op: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 7,
                                    },
                                },
                                value: Pipe,
                            },
                        },
                    ],
                    last: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 8,
                            },
                            end: Position {
                                line: 3,
                                column: 9,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                },
            },
        ),
    },
}
