crates/alder-parse/src/snapshots/alder_parse__statement__tests__provide_nested.snap
---
source: crates/alder-parse/src/statement.rs
description: "provide Db = Sqlite.open(\"app.db\") {\n    provide Session = session {\n        saveUser(u).await\n    }\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Provide {
        name: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "Db",
                },
            ],
        },
        value: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 35,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    value: Access {
                        record: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 20,
                                },
                            },
                            value: Path(
                                Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 14,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 20,
                                                },
                                            },
                                            value: "Sqlite",
                                        },
                                    ],
                                },
                            ),
                        },
                        field: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 21,
                                },
                                end: Position {
                                    line: 1,
                                    column: 25,
                                },
                            },
                            value: "open",
                        },
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 26,
                            },
                            end: Position {
                                line: 1,
                                column: 34,
                            },
                        },
                        value: Str(
                            "app.db",
                        ),
                    },
                ],
            },
        },
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 36,
                },
                end: Position {
                    line: 5,
                    column: 2,
                },
            },
            value: Block {
                stmts: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 4,
                                column: 6,
                            },
                        },
                        value: Provide {
                            name: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 20,
                                            },
                                        },
                                        value: "Session",
                                    },
                                ],
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 23,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 30,
                                    },
                                },
                                value: Var(
                                    "session",
                                ),
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 31,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 6,
                                    },
                                },
                                value: Block {
                                    stmts: [],
                                    tail: Some(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 9,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 26,
                                                },
                                            },
                                            value: Await(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 20,
                                                        },
                                                    },
                                                    value: Call {
                                                        function: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 3,
                                                                    column: 9,
                                                                },
                                                                end: Position {
                                                                    line: 3,
                                                                    column: 17,
                                                                },
                                                            },
                                                            value: Var(
                                                                "saveUser",
                                                            ),
                                                        },
                                                        arguments: [
                                                            Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 3,
                                                                        column: 18,
                                                                    },
                                                                    end: Position {
                                                                        line: 3,
                                                                        column: 19,
                                                                    },
                                                                },
                                                                value: Var(
                                                                    "u",
                                                                ),
                                                            },
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                },
                            },
                        },
                    },
                ],
                tail: None,
            },
        },
    },
}
