crates/alder-parse/src/snapshots/alder_parse__statement__tests__return_bare.snap
---
source: crates/alder-parse/src/statement.rs
description: return
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Return(
        None,
    ),
}
