crates/alder-parse/src/snapshots/alder_parse__statement__tests__return_before_brace.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ return }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Return(
                    None,
                ),
            },
        ],
        tail: None,
    },
}
